--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#">Company</a>
       <a href="#">Blog</a>
       <a href="#">Log in</a>
-      <a href="#">Sign up</a>
+      <button class="btn">Sign up</button>
     </header>
 
     <div id="hero">
@@ -29,12 +29,15 @@
     </div>
 
     <div id="article">
-      <h1>Wide coverage location</h1>
+      <h1>
+        Wide coverage<br />
+        location
+      </h1>
       <p>
         Shared rides, There’s lots to do in your city, and we’ve got the rides
         to help you enjoy it all. And they’re all available right from your app.
       </p>
-      <a href="">Learn more</a>
+      <a href="#" class="btn-learnmore">Learn more</a>
     </div>
   </body>
 </html>
